cluster/apps/default/duplicacy/duplicacy-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duplicacy
  namespace: default
  labels:
    app.kubernetes.io/name: duplicacy
spec:
  replicas: 1
  strategy:
    # All existing Pods are killed before new ones are created
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: duplicacy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: duplicacy
    spec:
      containers:
        - name: duplicacy
          image: saspus/duplicacy-web:v1.7.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exit $(test $(upTime=$(</proc/uptime) ;  upTime=${uptime%%.*} ; upTimeInDays=$(( upTime/60/60/24 )); currentTime=$(date +%H%M); echo $upTimeInDays$currentTime) -eq 290000 && echo 1 || echo 0)
            failureThreshold: 1
            initialDelaySeconds: 60
            periodSeconds: 60
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - "${SECRET_DUPLICACY_INIT_CMD}"
          ports:
            - containerPort: 3875
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 3000m
              memory: 6Gi
          volumeMounts:
            - mountPath: /config
              name: duplicacy-data
              subPath: config
            - mountPath: /logs
              name: duplicacy-data
              subPath: logs
            - mountPath: /cache
              name: duplicacy-cache
            - name: backup-share
              mountPath: /backups
      volumes:
        - name: duplicacy-data
          persistentVolumeClaim:
            claimName: duplicacy-data
        - name: duplicacy-cache
          emptyDir: {}
        - name: backup-share
          persistentVolumeClaim:
            claimName: backup-share
