cluster/apps/default/duplicacy/duplicacy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: duplicacy
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 3875
  selector:
    app.kubernetes.io/name: duplicacy
