cluster/apps/default/duplicacy/duplicacy-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: duplicacy
  namespace: default
  annotations: {}
spec:
  rules:
    - host: &host "backup.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: duplicacy
                port:
                  number: 80
  tls:
    - hosts:
        - *host
